[package]
name = "geotiff-focal-mean"
version = "0.1.0"
edition = "2021"
authors = ["Huimori Project"]
description = "High-performance focal mean calculator for categorical GeoTIFF rasters"
license = "MIT"

[[bin]]
name = "focal-mean"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# GDAL bindings for GeoTIFF I/O
gdal = { version = "0.17", features = ["bindgen"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parallel processing
rayon = "1.10"

# Logging
log = "0.4"
env_logger = "0.11"

# Numeric operations
ndarray = "0.16"
num-traits = "0.2"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
